[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/Add.png" type="Texture" id=1]
[ext_resource path="res://World.gd" type="Script" id=2]
[ext_resource path="res://assets/Solve.png" type="Texture" id=3]
[ext_resource path="res://assets/Start.png" type="Texture" id=4]
[ext_resource path="res://assets/Step.png" type="Texture" id=5]

[sub_resource type="AnimatedTexture" id=2]

[sub_resource type="AnimatedTexture" id=1]

[sub_resource type="AnimatedTexture" id=3]

[node name="World" type="Node2D"]
script = ExtResource( 2 )

[node name="add_button" type="TouchScreenButton" parent="."]
position = Vector2( 940, 375 )
scale = Vector2( 0.35, 0.35 )
normal = ExtResource( 1 )
pressed = SubResource( 2 )

[node name="graph_group" type="Node2D" parent="."]

[node name="solve_button" type="TouchScreenButton" parent="."]
modulate = Color( 0.984314, 0.92549, 0.0235294, 1 )
light_mask = 0
position = Vector2( 940, 525 )
scale = Vector2( 0.35, 0.35 )
normal = ExtResource( 3 )
pressed = SubResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="step_buttom" type="TouchScreenButton" parent="."]
modulate = Color( 0.984314, 0.92549, 0.0235294, 1 )
light_mask = 0
position = Vector2( 865, 525 )
scale = Vector2( 0.35, 0.35 )
normal = ExtResource( 5 )
pressed = SubResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="start" type="TouchScreenButton" parent="."]
position = Vector2( 940, 450 )
scale = Vector2( 0.35, 0.35 )
normal = ExtResource( 4 )
pressed = SubResource( 3 )

[connection signal="released" from="add_button" to="." method="_on_add_button_released"]
[connection signal="released" from="solve_button" to="." method="_on_start_button_released"]
[connection signal="released" from="step_buttom" to="." method="_on_step_buttom_released"]
[connection signal="released" from="start" to="." method="_on_start_released"]
